오와 열을 맞추자

--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -5,15 +5,18 @@
 <title>Beauty Chu~♥</title>
 <!-- 마페 -->
 
-<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="../images/favicon.ico"
+	type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+<link rel="stylesheet" type="text/css" href="../css/basic.css" />
 
 
 <!-- 쿠폰 알림 css -->
-<link rel="stylesheet" type="text/css" href="../css/resources/coupon/default.css" />
-<link rel="stylesheet" type="text/css" href="../css/resources/coupon/component.css" />
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/coupon/default.css" />
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/coupon/component.css" />
 <script src="../js/resources/coupon/modernizr.custom.js"></script>
 
 
@@ -28,22 +31,22 @@
 <link rel="stylesheet" href="../css/resources/starrr.css">
 <link rel="stylesheet"
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../css/yun/button.min.css"> 
+<link rel="stylesheet" href="../css/yun/button.min.css">
 
-<!-- 댓글 -->	
- <link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
-	media="all" /> 
+<!-- 댓글 -->
+<link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
+	media="all" />
 
 <!-- 공통 스크립트 -->
 <script type="text/javascript" src="../js/common.js"></script>
 
-	<script>
+<script>
 			window.intro = 'yes';
 	</script>
-		
+
 <!-- 공통 스크립트 -->
-<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script> 
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
 
 <!-- 지도 -->
 <script type="text/javascript"
@@ -51,14 +54,14 @@
 
 <style type="text/css">
 /*  댓글 스타일 */
-.comment{
-height: 50px;
+.comment {
+	height: 50px;
 }
 
 .kh-reviewbtn {
 	display: none;
-
 }
+
 .btn {
 	display: block;
 	float: right;
@@ -66,12 +69,10 @@ height: 50px;
 
 .none {
 	display: none;
-
 }
 
 .reviewUpdateForm {
-
-	 float: left; 
+	float: left;
 }
 
 .review-btn {
@@ -86,6 +87,7 @@ height: 50px;
 	font: normal;
 	font-size: 20px;
 }
+
 .write-comment-form {
 	display: none;
 }
@@ -93,20 +95,16 @@ height: 50px;
 /* 스타일 적용 공간! */
 
 /* ============================================================== */
-
-
-
 .wrap-chu {
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
-	margin-top: 30px; 
+	margin-top: 30px;
 }
 
 html {
 	height: 100%;
 }
-
 
 header {
 	height: 100px;
@@ -152,18 +150,20 @@ body {
 	position: relative;
 	width: 280px;
 	height: 350px;
- 	float: left; 
+	float: left;
 	margin: 5px;
 	font-size: 40px;
 	overflow: hidden;
 	border: 1px #dcdcdc solid;
-	margin-bottom : 30px;
+	margin-bottom: 30px;
 }
 
 .yun-edge {
+	
 }
 
 .yun-selected {
+	
 }
 
 .yun-boximage {
@@ -176,7 +176,7 @@ body {
 	bottom: 30px;
 	width: 265px;
 	height: 60px;
-	background-color: rgba(255,255,255,1);
+	background-color: rgba(255, 255, 255, 1);
 	color: black;
 	border-radius: 0px 0px 10px 10px;
 	font-size: 16px;
@@ -184,8 +184,9 @@ body {
 	line-height: normal;
 	padding-left: 7px;
 }
+
 .kh-basic h2 {
-	text-align : left;
+	text-align: left;
 	color: black;
 	margin-top: 15px;
 	margin-left: 10px;
@@ -208,9 +209,8 @@ body {
 }
 
 .kh-basic .starrr {
-   	margin-top: 10px;
+	margin-top: 10px;
 }
-
 
 .kh-detail {
 	display: none;
@@ -229,7 +229,6 @@ body {
 	height: 260px;
 	background-color: rgba(255, 255, 255, 0.85);
 	display: none;
-
 }
 
 .yun-shop-button .yun-shoppricelist {
@@ -240,9 +239,8 @@ body {
 	float: right;
 }
 
-kh-shopListName{
+kh-shopListName {
 	font-size: 30px;
-
 }
 
 /* ============================================================== */
@@ -295,7 +293,6 @@ kh-shopListName{
 	float: left;
 	margin: 4px;
 	text-align: center;
-	
 }
 
 .kh-priceicon img {
@@ -322,7 +319,7 @@ kh-shopListName{
 	bottom: 0px;
 	text-align: center;
 	width: 155px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 0 0 5px 5px;
 	color: white;
 }
@@ -333,14 +330,13 @@ kh-shopListName{
 	text-align: center;
 	width: 155px;
 	height: 178px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 5px;
 	color: white;
 }
 
 .kh-smalldetailinfo {
 	margin-top: 75px;
-	
 }
 
 #yun-buttondiv {
@@ -360,6 +356,7 @@ kh-shopListName{
 }
 
 .yun-shoppricelist {
+	
 }
 /* ============================================================== */
 /* yun-styledetail.html css */
@@ -450,6 +447,7 @@ kh-shopListName{
 	height: 50px;
 	font-size: 30px;
 }
+
 .yun-pricetitle {
 	float: left;
 	font-size: 30px;
@@ -467,38 +465,35 @@ kh-shopListName{
 .row {
 	height: 100%;
 	boredr: 1px green solid;
-	
 }
-
-
-
 
 /* ============================================================== */
 /* ==============================버튼 스타일================================ */
 </style>
 
 </head>
-<body class="home" >
-<div style="background-color: white;">
-	<header>
-		<!-- header 건들지 말긔! -->
-	</header>
+<body class="home">
+	<div style="background-color: white;">
+		<header>
+			<!-- header 건들지 말긔! -->
+		</header>
 
 
-	<!--	<div id=changediv >
+		<!--	<div id=changediv >
 			<div id=div1>1 <button class='yun-pricelist' type="button">price list</button>
 			</div>
 
 		</div> -->
 
 
-	<div id="wrap-chu" class="wrap-chu">
-	<DIV style="text-align:center;font-size:50px; height: 90px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 27px;width: 1160px;color:black;">SHOP</DIV>
-		<div class="yun-container">
-		
-		<!-- 샵 테이블 삽입부 -->
-		
-<!-- 			<div class="yun-box">
+		<div id="wrap-chu" class="wrap-chu">
+			<DIV
+				style="text-align: center; font-size: 50px; height: 90px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 27px; width: 1160px; color: black;">SHOP</DIV>
+			<div class="yun-container">
+
+				<!-- 샵 테이블 삽입부 -->
+
+				<!-- 			<div class="yun-box">
 				<img class="yun-boximage" src="../images/shop/shop1.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
@@ -510,24 +505,24 @@ kh-shopListName{
 					</div>
 					<div class="kh-gradation"></div>
 			</div> -->
-			
-			
-			
 
+
+
+
+			</div>
 		</div>
-	</div>
 
 
 
-	<footer>
-		<!-- footer 건들지 말긔! -->
-	</footer>
-<!-- 
+		<footer>
+			<!-- footer 건들지 말긔! -->
+		</footer>
+		<!-- 
 	<script type="text/javascript"
 		src='../js/resources/jquery-2.1.1.min.js'></script>
 	<script src="../js/resources/starrr.js"></script> -->
 
-	<script type="text/javascript">
+		<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
 		$('header').load('common/header.html'); 
 		$('footer').load('common/footer.html');
@@ -792,9 +787,29 @@ kh-shopListName{
 		 			    	  var template = Handlebars.compile(source);
 		 			    	  var html = template(data);
 		 			    	  $('#yun-shopcomment').html(html);
+		 			    	 console.log(yyyyMMdd(data.review.date));
+		 			    	 $('.kh-reviewDate').val(yyyyMMdd(data.review.date));
 		 			      });
 		 			    });
 		 	 	}
+				/* 댓글 날짜 */
+			function yyyyMMdd(date) {
+				  if (date) {
+				    var date = new Date(date);
+				    var str = date.getFullYear() + '-';
+				    
+				    if (date.getMonth() < 9) str += '0';
+				    str += (date.getMonth() + 1) + '-';
+				    
+				    if (date.getDate() < 10) str += '0';
+				    str += date.getDate();
+				    
+				    return str;
+				    
+				  } else {
+				    return '';
+				  }
+				}
 				
 				
 				
