--- a/beautyChuSpring/src/main/webapp/view/templates/jy_commenttemp.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/jy_commenttemp.html
@@ -24,68 +24,76 @@
  -->
 
 
-		<div class="write-comment-form">
-			<div class="jy-phot-comment">
-				<div class="jy-profile-phot">
-					<img class="prof-phot"
-						src="../images/logo_appchu.jpg" width="40" height="40" />
+<div class="write-comment-form">
+	<div class="jy-phot-comment">
+		<div class="jy-profile-phot">
+			<img class="prof-phot" src="../images/logo_appchu.jpg" width="40"
+				height="40" />
+		</div>
+	</div>
+	<div class="comment">
+		<div class="jy-text-comment">
+			<div class="jy-wr-comment">
+				<textarea id="kh-content" class="write-comment" title="댓글을 입력하세요"
+					placeholder="댓글을 입력하세요"></textarea>
+
+				<div class="jy-submit-comment">
+					<div class="jy-comment-icon">
+						<!-- <i class="jy-comment-submit-icon">입력</i>-->
+						<button id="kh-reviewAdd" class="jy-comment-submit-icon"
+							data-no="{{styleDetail.styleNumber}}">입력</button>
+					</div>
 				</div>
+
 			</div>
+		</div>
+	</div>
+</div>
+
+<div class="jy-comment-wrap">
+	<ul class="jy-comment-list2">
+
+		<li class="jy-row-comment">{{#each review}}
 			<div class="comment">
-				<div class="jy-text-comment">
-					<div class="jy-wr-comment">
-						<textarea id="kh-content" class="write-comment" title="댓글을 입력하세요"
-							placeholder="댓글을 입력하세요"></textarea>
-
-						<div class="jy-submit-comment">
-							<div class="jy-comment-icon">
-								<!-- <i class="jy-comment-submit-icon">입력</i>-->
-								<button id="kh-reviewAdd" class="jy-comment-submit-icon" data-no="{{styleDetail.styleNumber}}">입력</button>
-							</div>
+				<div class="left">
+					<img src="../images/logo_appchu.jpg" width="40" height="40"
+						class="img-circle img-responsive" alt="" />
+				</div>
+				<div class="right">
+					<div class="album">
+						<span class="icon buyer">실이용자</span> <strong>{{name}}</strong>
+						<button id="kh-btnDelete-{{reviewNo}}"
+							class="{{reviewbtn}} reviewDelete-btn"
+							data-reviewNo="{{reviewNo}}">삭제</button>
+						<button id="kh-btnUpdate-{{reviewNo}}"
+							class="{{reviewbtn}} reviewUpdate-btn"
+							data-reviewNo="{{reviewNo}}">수정</button>
+						<button id="kh-btnUpdateCancel-{{reviewNo}}"
+							class="{{reviewbtn}} reviewUpdateCancel-btn"
+							data-reviewNo="{{reviewNo}}" style="display: none;">수정취소</button>
+					</div>
+					<div class="band">
+						<div class="band-comment">
+							<pre id="kh-reviewContent-{{reviewNo}}">{{content}}</pre>
+							<textarea id="kh-reUpdateForm-{{reviewNo}}"
+								class='reviewUpdateForm' rows="2" cols="33"
+								style="display: none;">{{content}}</textarea>
+							<button id="kh-updateAdd-{{reviewNo}}"
+								class="jy-comment-submit-icon review-btn"
+								data-reviewNo="{{reviewNo}}" style="display: none;">입력</button>
 						</div>
-
+						<div class="band-comment kh-reviewDate">{{date}}</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		
-		<div class="jy-comment-wrap">
-			<ul class="jy-comment-list2">
-			
-				<li class="jy-row-comment">
-					{{#each review}}
-					<div class="comment">
-						<div class="left">
-							<img src="../images/logo_appchu.jpg" width="40" height="40"
-								class="img-circle img-responsive" alt="" />
-						</div>
-						<div class="right">
-							<div class="album">
-								<span class="icon buyer">실이용자</span>
-								<strong>{{name}}</strong>
-								<button id="kh-btnDelete-{{reviewNo}}" class="{{reviewbtn}} reviewDelete-btn" data-reviewNo="{{reviewNo}}">삭제</button>
-								<button id="kh-btnUpdate-{{reviewNo}}" class="{{reviewbtn}} reviewUpdate-btn" data-reviewNo="{{reviewNo}}">수정</button>
-								<button id="kh-btnUpdateCancel-{{reviewNo}}" class="{{reviewbtn}} reviewUpdateCancel-btn" data-reviewNo="{{reviewNo}}" style="display:none;">수정취소</button>
-							</div>
-							<div class="band">
-								<div class="band-comment">
-									<pre id="kh-reviewContent-{{reviewNo}}">{{content}}</pre>
-									<textarea id="kh-reUpdateForm-{{reviewNo}}" class='reviewUpdateForm' rows="2" cols="33" style="display:none;">{{content}}</textarea>	
-									<button id="kh-updateAdd-{{reviewNo}}" class="jy-comment-submit-icon review-btn" data-reviewNo="{{reviewNo}}" style="display:none;">입력</button>
-								</div>
-								<div class="band-comment"> {{date}}</div>
-							</div>
-						</div>
-					</div>
-					{{/each}}
+			</div> {{/each}}
 
-				</li>
+		</li>
 
-			</ul>
-		</div>
+	</ul>
+</div>
 
 
-	<!-- .wrap-chu -->
+<!-- .wrap-chu -->
 
 
 
@@ -106,7 +114,7 @@
 		}(jQuery))
 	</script> -->
 
-	<!-- header, footer 로드 스크립트!! -->
+<!-- header, footer 로드 스크립트!! -->
 <!-- 	<script>
 		 $('jy_header').load('common/jy_header.html');
 		 /*$('footer').load('common/footer.html'); */
