--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -9,10 +9,11 @@
 <link rel="stylesheet" href="../css/resources/radiobutton.css" />
 <!-- 마페 -->
 
-<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="../images/favicon.ico"
+	type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+<link rel="stylesheet" type="text/css" href="../css/basic.css" />
 
 <script type="text/javascript" src="../js/modernizr.min.js"></script>
 <script type="text/javascript" src="../js/jquery.easing.js"></script>
@@ -25,57 +26,54 @@
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../css/yun/button.min.css">
 <!-- 스타일 -->
-<!-- 댓글 -->	
+<!-- 댓글 -->
 <link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
 	media="all" />
-	
+
 <!-- 지도 -->
 <script type="text/javascript"
 	src="//apis.daum.net/maps/maps3.js?apikey=e5353ee43c5a9ea624372eb7cb8e99b1646087a2&libraries=services"></script>
 
 
-<!-- 썸네일 이미지 -->	
-<!-- 헤더랑 충돌중	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" /> --> 
-	<link rel="stylesheet" type="text/css" href="../css/shop.css" />
+<!-- 썸네일 이미지 -->
+<!-- 헤더랑 충돌중	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" /> -->
+<link rel="stylesheet" type="text/css" href="../css/shop.css" />
 
- <!-- 공통 스크립트 -->
-<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+<!-- 공통 스크립트 -->
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
 
 
-	<script>
+<script>
 			window.intro = 'yes';
 	</script>
-		
+
 <!-- 	page가 home일 경우에만 로드하는 js -->
 <!-- 공통 스크립트 -->
 
 
-    <script type="text/javascript" src="../js/resources/kh/jssor.js"></script> 
-    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script> 
+<script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
+<script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script>
 
 
 <!-- 썸네일이미지 -->
-	<script type="text/javascript" src="../js/shop.js"></script>
+<script type="text/javascript" src="../js/shop.js"></script>
 
 <style type="text/css">
-
 
 /* 스타일 적용 공간! */
 
 /* ============================================================== */
 
-
-
 /*  댓글 스타일 */
-.comment{
-height: 50px;
+.comment {
+	height: 50px;
 }
 
 .kh-reviewbtn {
 	display: none;
-
 }
+
 .btn {
 	display: block;
 	float: right;
@@ -83,12 +81,10 @@ height: 50px;
 
 .none {
 	display: none;
-
 }
 
 .reviewUpdateForm {
-
-	 float: left; 
+	float: left;
 }
 
 .review-btn {
@@ -99,20 +95,17 @@ height: 50px;
 	display: none;
 }
 
-
-
 /* ========================== */
 .wrap-chu {
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
-	margin-top: 30px; 
+	margin-top: 30px;
 }
 
 html {
 	height: 100%;
 }
-
 
 header {
 	height: 100px;
@@ -157,19 +150,21 @@ body {
 	position: relative;
 	width: 280px;
 	height: 427px;
- 	float: left; 
+	float: left;
 	margin: 5px;
 	font-size: 40px;
 	overflow: hidden;
 	border: 1px #c5c5c5 solid;
 	margin-bottom: 25px;
-	margin-top : 20px;
+	margin-top: 20px;
 }
 
 .yun-edge {
+	
 }
 
 .yun-selected {
+	
 }
 
 .yun-boximage {
@@ -187,6 +182,7 @@ body {
 	font-size: 30px;
 	border-top: 1px #c5c5c5 solid;
 }
+
 .kh-basic h2 {
 	color: black;
 	margin-top: 15px;
@@ -209,9 +205,8 @@ body {
 }
 
 .kh-basic .starrr {
-   	margin-top: 10px;
+	margin-top: 10px;
 }
-
 
 .kh-detail {
 	position: absolute;
@@ -228,14 +223,13 @@ body {
 	top: 0px;
 	width: 280px;
 	height: 370px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	display: none;
 }
 
 .yun-shop-button .yun-shoppricelist {
 	float: left;
 }
-
 
 /* ============================================================== */
 /* yun-test.html css */
@@ -290,7 +284,6 @@ body {
 	float: left;
 	margin: 4px;
 	text-align: center;
-	
 }
 
 .kh-priceicon img {
@@ -318,7 +311,7 @@ body {
 	text-align: center;
 	width: 155px;
 	height: 22px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	padding-top: 7px;
 	border-radius: 0 0 5px 5px;
 	color: white;
@@ -330,14 +323,13 @@ body {
 	text-align: center;
 	width: 155px;
 	height: 178px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 5px;
 	color: white;
 }
 
 .kh-smalldetailinfo {
 	margin-top: 75px;
-	
 }
 
 #yun-buttondiv {
@@ -357,6 +349,7 @@ body {
 }
 
 .yun-shoppricelist {
+	
 }
 /* ============================================================== */
 /* yun-styledetail.html css */
@@ -406,7 +399,6 @@ body {
 .yun-stylecomment {
 	width: 100%;
 	margin-top: 52px;
-	
 }
 
 /* ============================================================== */
@@ -450,6 +442,7 @@ body {
 	height: 50px;
 	font-size: 30px;
 }
+
 .yun-pricetitle {
 	float: left;
 	font-size: 30px;
@@ -468,67 +461,58 @@ body {
 .row {
 	height: 100%;
 	boredr: 1px green solid;
-	
 }
-
 
 /* ============================================================== */
 /* ==============================버튼 스타일================================ */
-
 .buttondiv {
 	text-align: center;
 }
 
 .ui.basic.button, .ui.basic.buttons .button {
-
-border-radius: 20px;
+	border-radius: 20px;
 }
-
-
 </style>
 
 </head>
 <body class="home">
-<div style="background-color: white;">
+	<div style="background-color: white;">
 
-	<header>
-		<!-- header 건들지 말긔! -->
-	</header>
+		<header>
+			<!-- header 건들지 말긔! -->
+		</header>
 
 
-	<!--	<div id=changediv >
+		<!--	<div id=changediv >
 			<div id=div1>1 <button class='yun-pricelist' type="button">price list</button>
 			</div>
 
 		</div> -->
-	<div id="wrap-chu" class="wrap-chu">
-	<div style="text-align: center;">
-	<DIV style="font-size:50px; height:50px;  padding: 20px; margin-top: 20px;" >STYLE</DIV>
-		<table style="margin: auto;">
-			<tr>
-				<td><input type="radio" name="radiog_dark" id="radio1"
-					class="css-checkbox"  checked="checked"  />
-					<label for="radio1" class="css-label" data-sort="All">ALL</label>
-				</td>
-				<td><input type="radio" name="radiog_dark" id="radio2"
-					class="css-checkbox" />
-					<label for="radio2"
-					class="css-label" data-sort="SHORT">SHORT</label>
-				</td>
-				<td><input type="radio" name="radiog_dark" id="radio3"
-					class="css-checkbox" />
-					<label for="radio3" class="css-label" data-sort="Medium">MEDIUM</label>
-				</td>
-				<td><input type="radio" name="radiog_dark" id="radio4"
-					class="css-checkbox" />
-					<label for="radio4" class="css-label" data-sort="Long">LONG</label>
-				</td>				
-			</tr>
-		</table>
-</div>
-<div class="yun-container" style="border-top: 2px black solid; margin-top: 10px; padding-left: 30px;"></div>	
+		<div id="wrap-chu" class="wrap-chu">
+			<div style="text-align: center;">
+				<DIV
+					style="font-size: 50px; height: 50px; padding: 20px; margin-top: 20px;">STYLE</DIV>
+				<table style="margin: auto;">
+					<tr>
+						<td><input type="radio" name="radiog_dark" id="radio1"
+							class="css-checkbox" checked="checked" /> <label for="radio1"
+							class="css-label" data-sort="All">ALL</label></td>
+						<td><input type="radio" name="radiog_dark" id="radio2"
+							class="css-checkbox" /> <label for="radio2" class="css-label"
+							data-sort="SHORT">SHORT</label></td>
+						<td><input type="radio" name="radiog_dark" id="radio3"
+							class="css-checkbox" /> <label for="radio3" class="css-label"
+							data-sort="Medium">MEDIUM</label></td>
+						<td><input type="radio" name="radiog_dark" id="radio4"
+							class="css-checkbox" /> <label for="radio4" class="css-label"
+							data-sort="Long">LONG</label></td>
+					</tr>
+				</table>
+			</div>
+			<div class="yun-container"
+				style="border-top: 2px black solid; margin-top: 10px; padding-left: 30px;"></div>
 
-<!--  			<div class="yun-box">
+			<!--  			<div class="yun-box">
 				<img class="yun-boximage" src="../images/main/woman (1).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
@@ -542,17 +526,17 @@ border-radius: 20px;
 					<div class="kh-gradation"></div>
 			</div>  -->
 
-	</div>
+		</div>
 
-	<footer>
-		<!-- footer 건들지 말긔! -->
-	</footer>
+		<footer>
+			<!-- footer 건들지 말긔! -->
+		</footer>
 
-<!-- 	<script type="text/javascript"
+		<!-- 	<script type="text/javascript"
 		src='../js/resources/jquery-2.1.1.min.js'></script>
 	<script src="../js/resources/starrr.js"></script> -->
 
-	<script type="text/javascript">
+		<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
 		$('header').load('common/header.html'); 
 		$('footer').load('common/footer.html');
@@ -1059,7 +1043,7 @@ border-radius: 20px;
 			    });
 	 	}
 	</script>
-</div>
+	</div>
 </body>
 </html>
 
