댓글 날짜 구현

--- a/beautyChuSpring/src/main/webapp/view/templates/jy_commenttemp.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/jy_commenttemp.html
@@ -82,7 +82,7 @@
 								class="jy-comment-submit-icon review-btn"
 								data-reviewNo="{{reviewNo}}" style="display: none;">입력</button>
 						</div>
-						<div class="band-comment kh-reviewDate">{{date}}</div>
+						<div class="band-comment kh-reviewDate{{date}}">{{date}}</div>
 					</div>
 				</div>
 			</div> {{/each}}
