--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -4,6 +4,15 @@
 <meta charset="UTF-8">
 <title>Beauty Chu~♥</title>
 
+
+<!-- 쿠폰 알림 css -->
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/coupon/default.css" />
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/coupon/component.css" />
+<script src="../js/resources/coupon/modernizr.custom.js"></script>
+
+
 <!-- 라디오버튼  -->
 
 <link rel="stylesheet" href="../css/resources/radiobutton.css" />
@@ -470,7 +479,7 @@ body {
 }
 
 .ui.basic.button, .ui.basic.buttons .button {
-	border-radius: 20px;
+	border-radius: 3px;
 }
 </style>
 
@@ -491,7 +500,7 @@ body {
 		<div id="wrap-chu" class="wrap-chu">
 			<div style="text-align: center;">
 				<DIV
-					style="font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">STYLE</DIV>
+					style="font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">WOMAN &nbsp; STYLE</DIV>
 				<table style="margin: auto;">
 					<tr>
 						<td><input type="radio" name="radiog_dark" id="radio1"
