--- a/beautyChuSpring/src/main/webapp/css/resources/coupon/default.css
+++ b/beautyChuSpring/src/main/webapp/css/resources/coupon/default.css
@@ -12,7 +12,7 @@
 	font-style: normal;
 }
 
-*, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+*, *:after, *:before { /* -webkit-box-sizing: border-box; */ -moz-box-sizing: border-box; /* box-sizing: border-box; */ }
 body, html { font-size: 100%; padding: 0; margin: 0; }
 
 /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
@@ -139,22 +139,22 @@ a:active {
 
 button {
 	
-	border: 1px gray solid;
-	padding: 0.6em 1.2em;
+	border: 2px rgb(222, 222, 222) solid;
+	padding: 0.54em 1.2em;
 	background: white;
-	color: black;
+	color: rgba(0,0,0,.6);
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	font-size: 1em;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	cursor: pointer;
 	display: inline-block;
-	margin: 3px 2px;
-	border-radius: 2px;
+	margin: -3px 2px;
+	border-radius: 3px;
 }
 
 button:hover {
-	background: #A5281B;
+	border: 2px black solid;
 }
 
 @media screen and (max-width: 46.0625em) {
