헤더 검색기능

--- a/beautyChuSpring/src/main/webapp/view/common/header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/header.html
@@ -41,7 +41,7 @@
 					</div></li>
 				<!-- end of li.m1 -->
 
-				<li class="m2"><a href="kh-styleman.html"><span
+				<li class="m2"><a href="kh-manAll.html"><span
 						class="over"></span><span class="label">Man</span></a>
 					<div class="sub-menu">
 						<ul>
@@ -83,8 +83,8 @@
 				</li>
 				<!-- search area -->
 				<li class="m5" style="border-right: 0;">
-					<form method="get" action="/search" id="search">
-						<input name="q" id="search-bar" type="text" placeholder="Search..." />
+					<form method="get"  id="search">
+						<input name="" id="search-bar" type="text" placeholder="Search..." />
 					</form>
 				</li>
 			<!-- end of li.m4 -->
@@ -604,5 +604,22 @@ $.ajax({
 
 
 })();
+	
+	
+	/* 검색기능 완료 */
+	$("#search-bar").keyup(function() {
+		console.log("ddddddddddddddddd");
+		$.getJSON('../json/style/list.do?styleLength=All&styleSort=All&styleName='+$('#search-bar').val(), 
+			    function(data){
+								console.log(data);	
+								console.log($('#search-bar').val());
+
+					      $.get('templates/style-table.html', function(source){
+						    	  var template = Handlebars.compile(source);
+						    	  var html = template(data);
+						    	  $('.yun-container').html(html);
+						    	});  
+					    });
+	});
 
 </script>
