--- a/beautyChuSpring/src/main/webapp/view/templates/kh-shop-table.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/kh-shop-table.html
@@ -4,7 +4,7 @@
 				<img class="yun-boximage" src="{{shopPhotoUrl}}">
 					<div class="kh-basic">
 						<h1 id="kh-shopListName"style=" font-size: 20px;">{{shopName}}</h1>
-						<p style="font: icon; font-size: 13px;">{{shopAddr}}</p>
+						<p style="font: icon; font-size: 13px; margin-top: 10px;">{{shopAddr}}</p>
 						<div class="starrr"></div>
 					</div>
 					<div class="kh-detail">
