--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -125,13 +125,13 @@
 				<div class="md-content">
 					<h3>쿠폰 발급</h3>
 					<div>
-						<p>쿠폰이 발급 되었습니다. 쿠폰함으로 가시겠습니까?</p>
+						<p>쿠폰이 발급 되었습니다.</p>
 						<!-- 					<ul>
 						<li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
 						<li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
 						<li><strong>Close:</strong> click on the button below to close the modal.</li>
 					</ul> -->
-						<button>쿠폰함 이동</button>
+						<!-- <button style="display:inline;">쿠폰함 이동</button> -->
 						<button class="md-close">닫기</button>
 					</div>
 				</div>
