--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -104,10 +104,13 @@
 		<!--**************************** 샵 내용 div **************************************-->
 
 		<div id='yun-shopcontentdetail'>
-			<pre>{{shop.shopIntro}}
-			{{shop.shopAddr}}
-			{{shop.shopTel}}
-</pre>
+			<div style="height:80px;">
+			<p>{{shop.shopIntro}}</p>
+			</div>
+			<div style="height:20px;">
+			<span><strong>주소:</strong>{{shop.shopAddr}}</span>
+			</div>
+			<span><strong>전화번호:</strong>{{shop.shopTel}}</span>
 
 
 
